remove <get tag by item> endpoint, refactor DAL/Repositoy layer to use stored procedures instead of EF, remove InStock from Item, IsInStockAsync now returns int, add additional procedures and create table statements to .sql

--- a/UI/Pages/Home.cshtml
+++ b/UI/Pages/Home.cshtml
@@ -74,7 +74,7 @@
                                 </div>
                             </a>
                             <div class="card-footer text-center">
-                                <button class="btn btn-primary w-100" onclick="addToCart(@item.IDItem)" @(item.InStock ? "" : "disabled")>
+                                <button class="btn btn-primary w-100" onclick="addToCart(@item.IDItem)" @(item.StockQuantity > 0 ? "" : "disabled")>
                                     Add to Cart
                                 </button>
                             </div>
